# msc_thesis

./: .gitignore  README.md  base_rviz.rviz  exporter.ipynb  frames.gv  init_camera.sh  launch_perception.sh  open_4_tmux_windows.sh  prepare_for_roboflow.ipynb  rosbag_play_only.sh  run_inference.py  source_noetic.sh  utils.py
anafi_setup/: CMakeLists.txt  package.xml
anafi_setup/config/: anafi_config.yaml
anafi_setup/launch/: launch_perception.launch
anafi_uav_msgs/: CMakeLists.txt  package.xml
anafi_uav_msgs/action/: GoTo.action  Land.action  SearchArea.action  TakeOff.action
anafi_uav_msgs/msg/: AttitudeSetpoint.msg  EkfOutput.msg  EulerPose.msg  Float32Stamped.msg  Heading.msg  PointWithCovarianceStamped.msg  PoseStampedEuler.msg  PositionSetpointRelative.msg  ReferenceStates.msg  SaturationLimits.msg
anafi_uav_msgs/srv/: SetDesiredPosition.srv  SetPlannedActions.srv
camera_control/: CMakeLists.txt  package.xml  setup.py
camera_control/launch/: camera_control.launch
camera_control/scripts/: camera_control.py
deepsort_tracker/: CMakeLists.txt  package.xml
deepsort_tracker/config/: deepsort_parameters.yaml
deepsort_tracker/launch/: deepsort_tracker.launch
deepsort_tracker/scripts/: run_tracker.py
deepsort_tracker/scripts/deepsort_realtime/: README.md  deepsort_tracker.py
deepsort_tracker/scripts/deepsort_tracker_utils/: bounding_box_utils.py
inference_class/: yolo8.py
offline_utils/: SeaDroneSea_prepare_data.py  create_mp4_from_images.py  move_files.py  remap_txt_categories.py
offline_utils/anafi_camera_calibration/: calib2.py  calibrate.py
offline_utils/analysis/MOT/: evaluate_trackers.ipynb
offline_utils/analysis_and_plotting/: IMPORTS_AND_FUNCTIONS.py
offline_utils/bagfile_creation/: analyse_test_data_bags.ipynb  bagfile_for_offline_maps.py  bagfiles_description.txt  make_bagfiles_from_data.py  print_json.py  remap_txt_categories.py
offline_utils/train_segmentation/: prepare_WSOC_dataset.ipynb  train.sh
offline_utils/train_yolov8/: Train_yolov8_on_custom_data.ipynb  evaluate_model.ipynb  train_config.yaml
offline_utils/visualizations/: visualize_dataset.ipynb
onnx_versions/: exporter.ipynb  run_inference.py  utils.py
perception_master/: CMakeLists.txt  package.xml
perception_master/config/: perception_master.yaml
perception_master/launch/: perception_master.launch
perception_master/msg/: DetectedPerson.msg
perception_master/scripts/: run_perception_master.py
pix2geo/: CMakeLists.txt  package.xml
pix2geo/config/: custom2std.yaml  drone_config.yaml  pix2geo.yaml
pix2geo/launch/: gnss2ned.launch  pix2geo.launch
pix2geo/msg/: TrackWorldCoordinate.msg
pix2geo/scripts/: run_custom2std_msg_converter.py  run_pix2geo.py
platform_tracker/apriltags_pose_estimator/: CMakeLists.txt  package.xml  setup.py
platform_tracker/apriltags_pose_estimator/config/: apriltags_config.yaml
platform_tracker/apriltags_pose_estimator/data/: camera_matrix.txt  determine_corner_locations.ipynb  marker_centers_on_platform.txt  platform_dist_project_thesis.txt  platform_dists_msc_platform.txt
platform_tracker/apriltags_pose_estimator/launch/: apriltags_pose_estimator.launch
platform_tracker/apriltags_pose_estimator/scripts/: apriltags_pose_estimator.py
platform_tracker/apriltags_pose_estimator/scripts/apriltags_utils/: apriltags_detector.py  homography.py  offline_apriltag_detector.py  pose_recovery.py
platform_tracker/dnn_cv/: CMakeLists.txt  package.xml
platform_tracker/dnn_cv/config/: anafi_real.yaml  dnncv_config.yaml  ros.yaml
platform_tracker/dnn_cv/launch/: dnnCV.launch
platform_tracker/dnn_cv/scripts/: dnncv.py
platform_tracker/dnn_cv/scripts/dnn_cv_helpers/: bb_pose_estimate.py
platform_tracker/ekf/: CMakeLists.txt  package.xml  setup.py
platform_tracker/ekf/config/: ekf_config.yaml
platform_tracker/ekf/launch/: perception_ekf_node.launch
platform_tracker/ekf/scripts/: run_ekf.py
platform_tracker/ekf/scripts/dynamic_models/: dynamic_models.py
platform_tracker/ekf/scripts/ekf_utils/: ekf.py
platform_tracker/ekf/scripts/measurement_models/: measurement_models.py
project_thesis_utils/: CMakeLists.txt  package.xml  setup.py
project_thesis_utils/launch/: image_publisher.launch  save_images.launch  video_publisher.launch
project_thesis_utils/scripts/: image_publisher.py  save_images.py  video_publisher.py
search/: CMakeLists.txt  package.xml
search/config/: search_node.yaml  waypoint_node.yaml
search/grid/: backup.txt
search/launch/: search_node.launch
search/scripts/: waypoint_node.py
sort_tracker/: package.xml
sort_tracker/config/: sort_parameters.yaml
sort_tracker/scripts/: run_tracker.py
test_tools/: CMakeLists.txt  package.xml
test_tools/config/: GNSS2NED.yaml  dataprinter.yaml  detector_simulator.yaml
test_tools/launch/: data_printer.launch  detector_simulator.launch  gnss2ned.launch
trackers/deepsort_tracker/: how_to_run_node.txt
trackers/sort_tracker/: CMakeLists.txt
train_segmentation/: classic-segmentation.ipynb  offline_maps.ipynb  prepare_sea_land_dataset.ipynb  train.sh  train_config.json  water-body-segmentation-unet-model.ipynb
train_segmentation/Pytorch-UNet-copy/: classic-segmentation.ipynb  train.py
train_segmentation/Pytorch-UNet-offline/: evaluate.py  predict.py  train.py
train_segmentation/Pytorch-segmentation-offline/: evaluate.py  train.py
train_yolov8/: Train_yolov8_on_custom_data.ipynb  evaluate_model.ipynb  prepare_for_roboflow.ipynb  train_config.yaml
transform_publisher/: CMakeLists.txt  package.xml  setup.py
transform_publisher/launch/: transform_publisher.launch
transform_publisher/scripts/: transform_publisher.py
water_segmentation/: CMakeLists.txt  package.xml  requirements.txt
water_segmentation/config/: dl_segmentation.yaml  map_segmentation.yaml  segmentation_master.yaml
water_segmentation/launch/: dl_segmentation.launch  map_segmentation.launch  segmentation_master.launch
water_segmentation/scripts/: run_dl_segmentation.py  run_map_segmentation.py  run_segmentation_master.py
water_segmentation/srv/: sendMask.srv
(+87 files in other folders)
