<?xml version="1.0"?>
<package format="2">
  <name>anafi_uav_msgs</name>
  <version>0.0.0</version>
  <description>The anafi_uav_msgs package</description>

  <maintainer email="martin@todo.todo">martin</maintainer>

  <license>TODO</license>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>


  <export>
  </export>
</package>
