<?xml version="1.0"?>
<package format="2">
  <name>camera_control</name>
  <version>0.0.0</version>
  <description>The camera_control package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="simensal@stud.ntnu.no">Simen Stensrod Allum</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>anafi_uav_msgs</build_depend>
  <build_depend>olympe_bridge</build_depend>


  <build_export_depend>anafi_uav_msgs</build_export_depend>
  <build_export_depend>olympe_bridge</build_export_depend>


  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>anafi_uav_msgs</exec_depend>
  <exec_depend>olympe_bridge</exec_depend>

</package>