<?xml version="1.0"?>
<package format="2">
  <name>apriltags_pose_estimator</name>
  <version>0.0.0</version>
  <description>The apriltags_pose_estimator package</description>

  <maintainer email="simenallum@stud.ntnu.no">TODO</maintainer>
  <license>TODO</license>

  <author email="simensal@stud.ntnu.no">Simen Stensrod Allum</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>anafi_uav_msgs</build_depend>

  <build_export_depend>anafi_uav_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>anafi_uav_msgs</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
